RCB3_Interface/RCB3_Interface.h

//Creation/Destruction of the interface. 
RCB_EXPORT bool CreateRCB3Interface(int in_comPort,int in_comSpeed,int in_model,UINT &out_rcb3Interface);
RCB_EXPORT bool DestroyRCB3Interface(UINT in_rcb3Interface);
RCB_EXPORT UINT GetLastRCB3Error();
RCB_EXPORT char* GetLastRCB3ErrorName(UINT error);
RCB_EXPORT char* GetLastRCB3FullErrorMessage();
//value of 0 or 1 for each. Usage depends on command too.
RCB_EXPORT UINT RCB3MakeOption(UINT storeToEeprom,UINT forceMotion);
 
enum {
    RCB3_DEFAULT_OPTION = 0,
    RCB_STORE_TO_EEPROM = 2,
    RCB_FORCE_MOTION = 4
};
inline bool MakeMotionScenarioIndex(UINT &out_motionScenarioIndex,int motion = -1, int scenario = -1)
{
    if ( motion == -1 && scenario == -1 )
        return false;
    if ( motion != -1 && scenario != -1 )
        return false;
    if ( motion < 0 || motion > 79 )
        return false;
    if ( scenario < 0 || scenario > 4 )
        return false;

    if ( scenario != -1 )
        out_motionScenarioIndex = 80+scenario;
    else
        out_motionScenarioIndex = motion;

    return true;
}
//Software Switches
RCB_EXPORT bool SetRCB3SoftwareSwitch(UINT in_rcb3,UINT in_SWITCH,UINT in_option);
RCB_EXPORT bool GetRCB3SoftwareSwitch(UINT in_rcb3,UINT &out_SWITCH,UINT in_option);
//Motion/Scenario Playback
RCB_EXPORT bool PlayMotion(UINT in_rcb3,UINT in_motionIndex,UINT in_option);
RCB_EXPORT bool PlayScenario(UINT in_rcb3,UINT in_scenarioIndex,UINT in_option);
//Interruption of port motion (one bit set per port to stop)
RCB_EXPORT bool StopPorts(UINT in_rcb3,UINT in_portsToStop);
//Set Port Speed and Position
RCB_EXPORT bool SetPortSpeedAndPosition(UINT in_rcb3,UINT in_portIndex,UINT in_speed,UINT in_position,UINT in_option);
RCB_EXPORT bool SetPortsSpeedAndPosition(UINT in_rcb3,UINT in_motionIndex,UINT in_slotIndex,UINT in_speed,const UINT *in_position /*24*/,UINT in_option);
RCB_EXPORT bool GetPortsSpeedAndPosition(UINT in_rcb3,UINT in_option,UINT in_motionIndex,UINT in_slotIndex,UINT &out_speed,UINT *out_position/*24*/);
RCB_EXPORT bool SetPortHomePosition(UINT in_rcb3,UINT in_portIndex,UINT in_homePosition,UINT in_option);
RCB_EXPORT bool SetPortsHomePosition(UINT in_rcb3,const UINT *in_homePositions/*24*/,UINT in_option);
RCB_EXPORT bool GetPortsHomePosition(UINT in_rcb3,UINT *out_homePositions/*24*/,UINT in_option);
//Teaching
RCB_EXPORT bool GetTeachedPosition(UINT in_rcb3,UINT *out_positions/*24*/);
//Scenario Edition
RCB_EXPORT bool SetMotionInScenario(UINT in_rcb3,UINT in_scenarioIndex,UINT in_slotIndex,UINT in_motionIndex,UINT in_option);
RCB_EXPORT bool GetMotionInScenario(UINT in_rcb3,UINT in_scenarioIndex,UINT in_slotIndex,UINT &out_motionIndex);
//Start switch/Power on Motion/Scenario
RCB_EXPORT bool SetStartupMotion(UINT in_rcb3,UINT in_motionScenarioIndexSwitchPressed,UINT in_motionScenarioIndexPowerOn,UINT in_option);
RCB_EXPORT bool GetStartupMotion(UINT in_rcb3,UINT &out_motionScenarioIndexSwitchPressed,UINT &out_motionScenarioIndexPowerOn);
//Low Power Configuration (in V)
RCB_EXPORT bool SetLowPowerThresholdAndMotion(UINT in_rcb3,float in_lowPower,UINT in_motionScenarioIndex,UINT in_option);
RCB_EXPORT bool GetLowPowerThresholdAndMotion(UINT in_rcb3,float &out_lowPower,UINT &out_motionScenarioIndex);
//RCB3 version (last byte will always be zero
RCB_EXPORT bool GetRCBVersion(UINT in_rcb3,char *out_version /*65*/);
//Analog Input 
//outputs/inputs (In V)

RCB_EXPORT bool GetAnalogInputs(UINT in_rcb3,float &out_power,float &out_ad1,float &out_ad2,float &out_ad3);
//Channel = 0,1 or 2
//Set to -1V for automatic detection but should not be done with ROM option
RCB_EXPORT bool SetAnalogBaseValue(UINT in_rcb3,UINT in_channel,float in_baseValue,UINT in_option);
RCB_EXPORT bool SetAnalogBaseValues(UINT in_rcb3,const float *in_baseValue /*3*/,UINT in_option);
RCB_EXPORT bool GetAnalogBaseValues(UINT in_rcb3,float *out_baseValue /*3*/,UINT in_option);
//RealTime Mixing
RCB_EXPORT bool SetRealTimeMixing(UINT in_rcb3,UINT in_channel,const UINT *in_mixingFactors/*24*/,const UINT *in_reverseFactor/*24*/,const UINT *in_set/*24*/,UINT in_option);
RCB_EXPORT bool GetRealTimeMixing(UINT in_rcb3,UINT in_channel,UINT *out_mixingFactors/*24*/,UINT *out_reverseFactor/*24*/,UINT *out_set/*24*/,UINT in_option);
//Configuration of Motion playback on AD Deltas.
//0 or 1 to enable or disable motion playback
//RCB_EXPORT bool SetMotionPlaybackforAD(UINT in_rcb3,UINT in_sc1AD1,UINT in_sc2AD1,UINT in_sc3AD2,UINT in_sc4AD2,UINT in_sc5AD3,UINT in_sc6AD3);

RCB_EXPORT bool SetMotionPlaybackforAD(UINT in_rcb3,const UINT *in_motionScenarioIndices/*6*/,
                                                    const UINT *in_levels/*6*/,
                                                    const UINT *in_reverse/*6*/,
                                                    const UINT *in_mixingSwitch/*6*/,
                                                    UINT in_option);
RCB_EXPORT bool GetMotionPlaybackforAD(UINT in_rcb3,UINT in_option,
                                       UINT *out_motionScenarioIndices/*6*/,
                                       UINT *out_levels/*6*/,
                                       UINT *out_reverse/*6*/,
                                       UINT *out_mixingSwitch/*6*/
                                       );
//Remote Control
RCB_EXPORT bool GetDataFromRemoteControl(UINT in_rcb3,char *out_remoteControl/*7*/);
RCB_EXPORT bool SetDataFromRemoveControlOverwrite(UINT in_rcb3,UINT in_option,UINT in_button,const UINT *in_analogChannel/*4*/);
//Serial Extension
RCB_EXPORT bool SetSerialExtensionAnalogBaseValues(UINT in_rcb3,const UBYTE *in_baseValue/*4*/,UINT in_option);
RCB_EXPORT bool GetSerialExtensionAnalogBaseValues(UINT in_rcb3,UINT in_option,UBYTE *out_baseValue/*4*/);
//ICS Mode
//1 bit per port
RCB_EXPORT bool SetPortsInICSMode(UINT in_rcb3,UINT in_portsInICS,UINT in_option);
RCB_EXPORT bool GetPortsInICSMode(UINT in_rcb3,UINT &out_portsInICS);